# suites

./: .gitignore  Cargo.toml  readme.md
machines/: win10-basic.toml
src/: gui.rs  main.rs  structs.rs
